Audience title stabs aligned left and brands source text fixed

--- a/sass/layout/_tabs.scss
+++ b/sass/layout/_tabs.scss
@@ -92,7 +92,7 @@
     padding: 0;
 }
 @media screen and (min-width:768px){
-    .etabs {
+    .region-tab-container .etabs {
         margin-bottom: 20px;
         margin-top: 30px;
         padding: 0;
@@ -101,6 +101,23 @@
         max-width: 700px;
     }
 }
+
+@media screen and (min-width:768px){
+    .tab-container  .etabs {
+        margin-bottom: 20px;
+        padding: 0;
+        display: block;
+        width:100%;
+        float: left;
+    }
+
+     .tab-container  .etabs .tab {
+        float: left;
+        margin-left: 0;
+        margin-right:10px;
+    }
+}
+
 .tab {
     position: relative;
     display: block;
